--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-node_modules
-dist
+node_modules/
+.DS_Store
+*.log
+dist/
+build/
 .env
 .env.local
-.env.production
-*.log
-.DS_Store
+.env.*.local
+*.swp
+*.swo
+*~
+.vscode/
+.idea/
+*.iml
+.cache/
